added some improvements
