# db/schema.rb
@@ -17,9 +17,7 @@ ActiveRecord::Schema[7.2].define(version: 2024_09_17_190506) do
   create_table "companies", force: :cascade do |t|
     t.string "name", null: false
     t.string "timezone", null: false
-    t.integer "work_week_start", null: false
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
+    t.integer "start_day", null: false
   end
 
   create_table "users", force: :cascade do |t|
@@ -30,8 +28,6 @@ ActiveRecord::Schema[7.2].define(version: 2024_09_17_190506) do
     t.string "title", null: false
     t.string "phone_number", null: false
     t.integer "role", default: 0, null: false
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
     t.index ["company_id"], name: "index_users_on_company_id"
     t.index ["email"], name: "index_users_on_email", unique: true
   end
